# NetAnalyzer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  main.rs  theme.rs
src/scanner/: ip.rs  mod.rs  port.rs  services.rs
src/speed/: http_test.rs  mod.rs
src/ui/: channel_analyzer.rs  dashboard.rs  ip_scanner.rs  mod.rs  port_scanner.rs  sidebar.rs  speed_test.rs  wifi_scanner.rs
src/ui/widgets/: gauge.rs  mod.rs  progress_bar.rs  status_badge.rs
src/utils/: mod.rs  network.rs
src/wifi/: channel.rs  linux.rs  macos.rs  mod.rs  windows.rs
wix/: main.wxs
